Added two images

--- a/eindopdracht/doc/final_report.tex
+++ b/eindopdracht/doc/final_report.tex
@@ -6,6 +6,7 @@
 \usepackage{amssymb}
 \usepackage{rotating}
 \usepackage{verbatim}
+\usepackage{graphicx}
 
 \author{Judith van Stegeren and Mirjam van Nahmen}
 \title{Development of the Mars Rover robot}
@@ -328,6 +329,14 @@ all colors found & true if all lakes in the measurement array are flagged as 'fo
 
 \subsection*{Instances for the Mars Rover}
 %  Describe the instance(s) of the DSL that are used for the Mars Rover, explain the main idea.
+We have made 20+ instances during the development of the Mars Rover. We will elaborate only on the instances used for the final program.
+We use one instance for every brick.
+
+\subsubsection{Master}
+\includegraphics[width=24cm,angle=90,origin=c]{t9-m.png}
+
+\subsubsection{Slave}
+\includegraphics[width=16cm]{t9-s.png}
 
 \subsection*{Main structure of the generated code}
 % Describe the main structure of the generated code.
