Added more on realisation

--- a/eindopdracht/doc/final_report.tex
+++ b/eindopdracht/doc/final_report.tex
@@ -218,6 +218,7 @@ From a commercial point of view, another advantage is that this way our implemen
 %That is in the future useful to use it again for comparable projects which is in the business world quite often the case.  
 And finally, it seemed to us that this approach was the most interesting to implement, with all its challenges.
 
+
 \subsection{Syntax} 
 %  Describe the concrete syntax of the DSL; what is the main idea, what is the meaning of the language?
 The idea behind the DSL is a finite state machine. 
@@ -332,6 +333,14 @@ all colors found & true if all lakes in the measurement array are flagged as 'fo
 We have made 20+ instances during the development of the Mars Rover. We will elaborate only on the instances used for the final program.
 We use one instance for every brick.
 
+Since we use a state machine, we wanted the following assumptions to hold when designing the automatons:
+\begin{enumerate}
+\item every state is a black box without weird side effects, ie. when the current state is not s1, no part of s1 will be executed.
+\item the outgoing arrows of every state should together cover all possible situations. If not, we get stuck in one of the states.
+\end{enumerate}
+
+The instances we have defined for the master and slave bricks are a description of the following automatons:
+
 \subsubsection{Master}
 \includegraphics[width=24cm,angle=90,origin=c]{t9-m.png}
 
@@ -377,6 +386,23 @@ For debugging and readability reasons we also created the thread \emph{Colorfunc
 \section*{Realization of the Mars Rover}
 % Describe the order in which features of the Mars Rover have been implemented.
 The first steps were to design and implement the basic structure of the DSL and the code generation. We decided to use the state diagram and designed the start/end state and the robot should be able to wander an area without falling off the table. 
+
+We built the rover by incrementally implementing the concepts we needed for the rover. Our first goal was to have a rover that could drive around freely without falling off the table. It took us more time to implement this basic functionality than normal, since we had to implement the state machine framework before we could test our instances of the DSL!
+After two weeks we had a working framework and a first stub of a DSL. 
+
+At the beginning, we have made a list of elements of the project where we anticipated problems with the implementation: 
+\begin{enumerate}
+\item bluetooth communication and working with threads
+\item communication protocol / packets between the two bricks
+\item usage of the RCX motor and temperature sensor
+\item code generation -- we wanted the code to be clear and modular
+\item manouvering around the lakes ("parking"), in such a way that the temperature sensor finishes in the right position.
+\item color recognition in different lighting conditions
+\end{enumerate}
+
+To mitigate these potential problems, we decided to build small test instances for every problem before incorporating new functionality in the final program. Because of this incremental, modular approach, every problem could be spotted and debugged in an isolated test case, which made everything easier. 
+
+
 
 \subsection*{Final result}
 % Describe the final result: what has been implemented exactly, which requirements are satisfied, which requirements are not satisfied and explain why not. 
