--- a/eindopdracht/doc/final_report.tex
+++ b/eindopdracht/doc/final_report.tex
@@ -449,28 +449,36 @@ januari 2	& parking, testing the mars rover as a whole\\
 	% • What are general lessons learned? 
 
 \section{Evaluation of the work on the Mars Rover}
-The most important steps of our Mars Rover project were  in the beginning the decision to create a DSL in form of a state machine. With this decision we solved some problems we encountered during the project of the small Rover. For example the problem of the unclear working with the Arbitrator and the bluetooth communication using a Thread. The coding was for us now more open and we knew in every state exactly what the robot does, that made the programming and working with the robot more easy. But the decision created also some problems. We had to begin from scratch and couldn't use much code from the small Rover, we had to built the framework which was a challenge for us, because we had not much experience with LeJos and NXT. 
-%Something about DSL of the small rover???
+\textbf{What were the most important steps during the development; what was difficult, what was easy, was the order of the steps suitable?}\\
+The most important steps of our Mars Rover project were in the beginning the decision to create a DSL in form of a state machine. With this decision we solved some problems we encountered during the project of the small Rover. For example the problem of the untransparent workings of the Arbitrator and the bluetooth communication using a Thread. Because we used a deterministic automata approach, we knew in every state exactly what the robot does. The behaviour of the robot was for us now more transparent, and this made the programming and working with the robot more easy. 
+The decision created also some problems. We had to begin with building the framework from scratch and couldn't use much code from the small Rover. This was a challenge for us, because we had not much experience with LeJos and NXT without the subsumption architecture.
 
-\subsection{Planning}
-We tried to work every week one day together, but we had of course some problems, because we had not on the same day time to work together, but we managed to create a good task allocation and we could also work on different days. We also discussed every week a goal which should been reached, such that we could show a result to Jozef. As an effect of this is that we didn't stay to long on one complex problem and to find sometimes a solution which is more convenient and for that moment useful, but not really nice. \\
+%\subsection{Planning}
+We tried to work every week one day together in the DES-lab, but we had of course some problems. Because we both had very different schedules, it was hard to find time to work together. We managed to create a good task allocation and we could also work on different days. We also discussed every week a goal which should been reached, so that we could show a result to Jozef. As an effect of this is that we didn't stay to long on one complex problem and to find sometimes a solution which is more convenient and for that moment useful, but not really nice. %example?\\
 
-To get the project more structured we made a list with subject which can be problematic and which need more time to find a good solution. This helped because we got early an impression how big th project becomes and we had in the beginning time to get in the subjects. A second advantage of this approach was  that we could build our DSL around the difficult subjects and we didn't had to change the DSL so much. \\
-During the hole programming phase we build small tests which are successive such that we could very nicely test every component separately. Further could we built the test that go more and more to a complete solution for the Mars Rover.\\
+To get the project more structured we made a list with subject which can be problematic and which need more time to find a good solution. This helped because we got early an impression how big the project becomes and we had in the beginning time to get in the subjects. A second advantage of this approach was that we could build our DSL around the difficult subjects and we didn't had to change the DSL so much. \\
+During the whole programming phase we build small tests which are successive such that we could very nicely test every component separately. Further could we built the test that go more and more to a complete solution for the Mars Rover.\\
 
-\subsection{Our solution}
+\textbf{Looking back at your DSL and code generation; what would you do differently, what could be improved (e.g., if you would have more time)?}\\
+Because of the limited time of the project and the very narrow goal of the DSL -- the DSL is for only one mission and for only one robot (in our case, two robots, master and slave) -- the DSL is a bit less abstract than we would have liked. To complete the project in time, we had to focus on implemented the functionality that was most useful for the final demo. For this reason, we hardly have any code or grammar-specifications of things that we did not use heavily, such as the lamp and the sonar. 
+We could also have spent less time on the bluetooth implementation. We have a few problems with getting the bluetooth communication to work during development, but since we did not exactly know the cause of the problem we spent a lot of time debugging. A tip from Jozef during the demo solved the issue, luckily, but it turned out to be a very minor thing and it should've taken less time.\\
+
+\textbf{How often did you change the DSL, is there a large difference with the DSL for the small Lego NXT Rover, what where the reasons for changes?}\\
+Because of our test-driven approach, we extended the DSL weekly with new functionality. Since the DSL for the small rover was very limited, there is a big difference between the DSL for the small rover and the DSL for the mars rover. The small rover had no distinction between the master and the slave, there was only a limited set of actions and since we were still working with the subsumption architecture, we had to incorporate priorities in the DSL.\\
+
+%\subsection{Our solution}
+\textbf{How flexible and extendable is your solution? For instance, how easy is it to add sensors, actuators, to move them to another NXT brick, or to add new functionality?}
 The case that we use a state machine is useful in different ways, it makes it easy to create a model of the state machines. To change the modules of the robot only the code generator has to be changed, that is positive, because the old instances of the robot could be used further. \\
 For our robot is it also very easy to add some new functions and modules. Our DSL is very structured and it is easy to add a new arrow with constraints and a new state with new actions in the instances. Also to add some new code is our code very good structured which makes it easy to add new functionality. \\
 The bluetooth connection is also extendable, we worked with a number code to identify the different messages. The numbers are integers and it is easy to add new messages in the DSL with the corresponding numbers. \\
 The state machine approach was useful to structure the coding process, because we had to split every step of the robot in conditions for the arrow and actions which should be done when the conditions match. This made it also easy to split our tasks in basic stuff, condition stuff and action stuff. Also the way to solve a complex problem was in the way of thinking in which conditions are there and what should the robot do to reach the state we want. In the beginning we thought to big and to complex, but after the first few tests, we learned the advantages and it was easier to split the big problems in smaller ones which made it easier to solve it. \\
-
-
 
 \subsection{Future work}
 If had more time, we had changed  and extended some different things. The Bluetooth works not perfectly with the ultra sonic sensor. The sensor sends non stop the distance to the master until he don't sees something, then he sends one time 500. But this blocks the other functions of the robot and it is possible that the robot goes always back until the sensor stops with sending. \\
 A second thing is the calibration of the sensors, the robot is very addicted to the ambient light, a solution is to calibrate every light and color sensor before every start. At this moment the robot only calibrates the light values, this can be improved. 
 
 \subsection{Eclipse, LeJOS, Xtext,and Xtend}
+% • What are the observations about the technology used, such as Eclipse, LeJOS, Xtext,and Xtend?
 Working with Java and NXT was new for us, but it worked very good. LeJOS, Xtext and Xtend are very well documented and also often used, so that there are many forums and blogs which answered to many of our questions we had during coding. Especially the API description is very good and explains many functions.\\
 The only problem we had, is that the Java which is used for LeJOS does not support every basic functionality of Java. But to find this, we used a lot of try and error tests. 
 
